force-app/main/default/objects/Full_Patient_History__c/Full_Patient_History__c.object-meta.xml
<CustomObject>
    <label>Full Patient History</label>
    <nameField>
        <label>Full Patient History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Full Patient Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>