force-app/main/default/objects/Full_Patient_History__c/fields/Arbitration_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Verification_Date__c</fullName>
    <label>Arbitration Verification Date</label>
    <type>Date</type>
</CustomField>