force-app/main/default/objects/Full_Patient_History__c/fields/AreasOf_Interest_Brown_Spots__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_Brown_Spots__c</fullName>
    <label>Areas of Interest Brown Spots</label>
    <length>255</length>
    <type>Text</type>
</CustomField>