force-app/main/default/objects/Full_Patient_History__c/fields/AreasOf_Interest_Other__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_Other__c</fullName>
    <label>Areas of Interest Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>