force-app/main/default/objects/Full_Patient_History__c/fields/AreasOf_Interest_Weight_Management__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_Weight_Management__c</fullName>
    <label>Areas of Interest Weight Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>