force-app/main/default/objects/Full_Patient_History__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Full Patient Histories</relationshipLabel>
    <relationshipName>Full_Patient_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>