force-app/main/default/objects/Full_Patient_History__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Full Patient Histories</relationshipLabel>
    <relationshipName>Full_Patient_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>