force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Autoimmune_Disorders__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Autoimmune_Disorders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Autoimmune Disorders</label>
    <type>Checkbox</type>
</CustomField>