force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Botox_Restylane_Dermal_Filler__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Botox_Restylane_Dermal_Filler__c</fullName>
    <label>History Of Botox/Restylane/Dermal Filler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>