force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Hip_Replacement__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Hip_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Hip Replacement</label>
    <type>Checkbox</type>
</CustomField>