force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Lymph_Node_Removal__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Lymph_Node_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Lymph Node Removal</label>
    <type>Checkbox</type>
</CustomField>