force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Numbness_in_the_area__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Numbness_in_the_area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Numbness in the area</label>
    <type>Checkbox</type>
</CustomField>