force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Present_Scarring__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Present_Scarring__c</fullName>
    <label>History Of Present Scarring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>