force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Recent_Cosmetic_Procedures__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Recent_Cosmetic_Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Recent Cosmetic Procedures</label>
    <type>Checkbox</type>
</CustomField>