force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Retin_A_or_Generics__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Retin_A_or_Generics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Retin-A or Generics</label>
    <type>Checkbox</type>
</CustomField>