force-app/main/default/objects/Full_Patient_History__c/fields/History_Of_Vitiligo__c.field-meta.xml
<CustomField>
    <fullName>History_Of_Vitiligo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Of Vitiligo</label>
    <type>Checkbox</type>
</CustomField>