force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Asthma__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Asthma__c</fullName>
    <label>History Of Asthma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>