force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Autoimmune_Disorders__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Autoimmune_Disorders__c</fullName>
    <label>History Of Autoimmune Disorders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>