force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Diabetes_1__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Diabetes_1__c</fullName>
    <label>History Of Diabetes 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>