force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Facial_Skin_Products__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Facial_Skin_Products__c</fullName>
    <label>History Of Facial Skin Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>