force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Herbal_Supplements__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Herbal_Supplements__c</fullName>
    <label>History Of Herbal Supplements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>