force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Hernias__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Hernias__c</fullName>
    <label>History Of Hernias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>