force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Herpes_Virus_Cold_Sore__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Herpes_Virus_Cold_Sore__c</fullName>
    <label>History Of Herpes Virus/Cold Sore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>