force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Hip_Replacement__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Hip_Replacement__c</fullName>
    <label>History Of Hip Replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>