force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_HIV__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_HIV__c</fullName>
    <label>History Of HIV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>