force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Keliod_Hypertrophic_Scarring__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Keliod_Hypertrophic_Scarring__c</fullName>
    <label>History Of Keliod/Hypertrophic Scarring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>