force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Latex_Allergies__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Latex_Allergies__c</fullName>
    <label>History Of Latex Allergies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>