force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Lupus__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Lupus__c</fullName>
    <label>History Of Lupus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>