force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Lymph_Node_Removal__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Lymph_Node_Removal__c</fullName>
    <label>History Of Lymph Node Removal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>