force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Medullary_thyroid_carcinoma__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Medullary_thyroid_carcinoma__c</fullName>
    <label>History Of Medullary thyroid carcinoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>