force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Numbness_in_the_area__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Numbness_in_the_area__c</fullName>
    <label>History Of Numbness in the area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>