force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Permanent_Make_up__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Permanent_Make_up__c</fullName>
    <label>History Of Permanent Make-up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>