force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Sarcoidosis__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Sarcoidosis__c</fullName>
    <label>History Of Sarcoidosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>