force-app/main/default/objects/Full_Patient_History__c/fields/HistoryOf_Seizures_Epilepsy__c.field-meta.xml
<CustomField>
    <fullName>HistoryOf_Seizures_Epilepsy__c</fullName>
    <label>History Of Seizures /Epilepsy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>