force-app/main/default/objects/Full_Patient_History__c/fields/Multiple_Endocrine_Neopla_SyndromeText__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Endocrine_Neopla_SyndromeText__c</fullName>
    <label>Multiple Endocrine Neoplastic Syndrome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>