force-app/main/default/objects/Full_Patient_History__c/fields/one_of_above_apply_to_me__c.field-meta.xml
<CustomField>
    <fullName>one_of_above_apply_to_me__c</fullName>
    <label>None of the above apply to me</label>
    <length>255</length>
    <type>Text</type>
</CustomField>