force-app/main/default/objects/Full_Patient_History__c/fields/Over_theCounter_medications__c.field-meta.xml
<CustomField>
    <fullName>Over_theCounter_medications__c</fullName>
    <label>Over the counter medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>