force-app/main/default/objects/Full_Patient_History__c/fields/PacemakersInternal_pacing_devices__c.field-meta.xml
<CustomField>
    <fullName>PacemakersInternal_pacing_devices__c</fullName>
    <label>Pacemakers/internal pacing devices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>