force-app/main/default/objects/Full_Patient_History__c/fields/Photo_Consent_Acknowledgement_CheckBox_1__c.field-meta.xml
<CustomField>
    <fullName>Photo_Consent_Acknowledgement_CheckBox_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BY SIGNING BELOW, I ACKNOWLEDGE AND CERTIFY THAT I HAVE READ AND UNDERSTAND THE &quot;CONSENT, RELEASE AND INDEMNITY AGREEMENT&quot;,FOR THIS PROCEDURE, AND THAT I AM SIGNING IT VOLUNTARILY.</description>
    <label>Photo Consent Acknowledgement CheckBox 1</label>
    <type>Checkbox</type>
</CustomField>