force-app/main/default/objects/Full_Patient_History__c/fields/Pregnant_Actively_trying_to_get__c.field-meta.xml
<CustomField>
    <fullName>Pregnant_Actively_trying_to_get__c</fullName>
    <defaultValue>false</defaultValue>
    <description>History Of Pregnant/Actively trying to get</description>
    <label>Pregnant/Actively trying to get</label>
    <type>Checkbox</type>
</CustomField>