force-app/main/default/objects/Full_Patient_History__c/fields/Return_Policy_Acknowledgement_CheckBox_2__c.field-meta.xml
<CustomField>
    <fullName>Return_Policy_Acknowledgement_CheckBox_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have read and understand the acknowledgement</description>
    <label>Return Policy Acknowledgement CheckBox 2</label>
    <type>Checkbox</type>
</CustomField>