force-app/main/default/objects/Full_Patient_History__c/fields/Return_Policy_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Policy_Verification_Date__c</fullName>
    <label>Return Policy Verification Date</label>
    <type>Date</type>
</CustomField>