force-app/main/default/objects/Full_Patient_History__c/fields/SUGGESTION_for_Bag_or_Photo_Medication__c.field-meta.xml
<CustomField>
    <fullName>SUGGESTION_for_Bag_or_Photo_Medication__c</fullName>
    <label>SUGGESTION for Bag or Photo Medication</label>
    <type>TextArea</type>
</CustomField>