force-app/main/default/objects/Full_Patient_History__c/fields/TruSculpt_Body_Contouring__c.field-meta.xml
<CustomField>
    <fullName>TruSculpt_Body_Contouring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TruSculpt/Body Contouring</label>
    <type>Checkbox</type>
</CustomField>