force-app/main/default/objects/Full_Patient_History__c/fields/TruSculptBody_Contouring__c.field-meta.xml
<CustomField>
    <fullName>TruSculptBody_Contouring__c</fullName>
    <label>TruSculpt/Body Contouring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>